Improving GC example